--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   uuid: ^4.2.2
+  flutter_hooks: ^0.20.4
+  hooks_riverpod: ^2.4.9
 dev_dependencies:
   flutter_test:
     sdk: flutter
